kubernetes/prod/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plan-eo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "plan-eo"
    nginx.org/proxy-connect-timeout: "600s"
    nginx.org/proxy-read-timeout: "600s"
    nginx.org/proxy-send-timeout: "600s"
spec:
  rules:
    - host: plan-eo.pods.uvarc.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plan-eo
                port:
                  number: 80



  tls:
    - hosts:
        - plan-eo.pods.uvarc.io
      secretName: plan-eo-nginx-tls-ingress-secret
